# pomme-screenshare

./: Cargo.toml  README.md
crates/client/: Cargo.toml
crates/client/src/: h264_encoder.rs  main.rs  text_input.rs  video.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
src/: main.rs
