[package]
name = "pomme-screenshare-client"
version = "0.1.0"
edition = "2024"
description = "GPUI desktop client for Pomme Screenshare."
license = "MIT"

[dependencies]
gpui = "0.2.2"
image = { version = "0.25.10", default-features = false }
openh264 = "0.9.3"
unicode-segmentation = "1.12.0"
xcap = { version = "0.9.4", features = ["wgc"] }

[target.'cfg(target_os = "macos")'.dependencies]
core-video = "0.4.3"
objc2-core-graphics = "0.3.2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Foundation", "Win32_Media_MediaFoundation", "Win32_System_Com"] }
